Archive2/30/a0b8e593f9b0d4/output
main.cpp:14:2: error: C++ requires a type specifier for all declarations
        ArithmeticProg(T val, T inc) : val(val), inc(inc) {}
        ^~~~~~~~~~~~~~
main.cpp:16:2: error: unknown type name 'ArithmeticProg'
        ArithmeticProg& operator++() noexcept(noexcept(val += inc))
        ^
main.cpp:14:31: error: only constructors take base initializers
        ArithmeticProg(T val, T inc) : val(val), inc(inc) {}
                                     ^
main.cpp:33:1: error: unknown type name 'ArProg'
ArProg<typename std::common_type<T, U>::type>
^
main.cpp:33:7: error: expected unqualified-id
ArProg<typename std::common_type<T, U>::type>
      ^
5 errors generated.
